# x3_description

./: CMakeLists.txt  README.md  package.xml  params.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/rov_hil/: CMakeLists.txt  package.xml
config/: TAM.yaml  TAM_copy.yaml  TAM_old.yaml  control.yaml  thruster_manager.yaml  x3_camera.yaml
launch/: empty_underwater_world.launch  ground_truth.launch  irl_keyboard_teleop.launch  joint_state_controller.launch  keyboard_teleop.launch  rviz.launch  simulation.launch  start_thruster_manager.launch  teleop_kb.launch  ue_empty_world.launch  ue_teleop.launch  upload.launch  upload_x3.launch  video_stream.launch
meshes/: propeller.dae
models/: x3_low_poly_smoothed.dae
robots/: default.xacro
rviz_config/: default.rviz
scripts/: camera_control.py  irl_imu_router.py  publish_cmd_simulation.py  publish_irl.py  publish_model_state.py  sync_imu_ue.py  x3_camera.py  x3_irl.ipynb  x3_publish_model_state.py  x3_teleop_irl.py  x3_teleop_keyboard_pynput.py
scripts/irl/: irl_imu_router.py  irl_udp_rec.py
scripts/sim/: camera_control.py
scripts/unused/: input_simulation.py  random_tests.py  teleop_keyboard_pynput_wrench.py  test_connect.ipynb  test_connect2.py
unused/launch/: x3_gazebo.launch  x3_rviz.launch  x3_simulation.launch
urdf/: actuators.xacro  base.xacro  gazebo.xacro  helpers.xacro  macros2.xacro  sensors.xacro  snippets.xacro  x3_components.xacro  x3_sensors.xacro  x3_v2.xacro  x3_v3.xacro
(+903 files in other folders)
