<?xml version="1.0"?>
<package format="3">
  <name>x3_sim</name>
  <version>0.0.0</version>
  <description>The x3_sim package</description>
  <maintainer email="einar@todo.todo">einar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
